--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -249,72 +249,44 @@
         </widget>
        </item>
        <item>
-        <widget class="QGroupBox" name="groupBox_fonts_message">
-         <property name="title">
-          <string>Message</string>
+        <widget class="QFrame" name="frame">
+         <property name="frameShape">
+          <enum>QFrame::StyledPanel</enum>
          </property>
-         <layout class="QVBoxLayout" name="layout_fonts_message">
-          <property name="spacing">
-           <number>6</number>
-          </property>
-          <property name="leftMargin">
-           <number>4</number>
-          </property>
-          <property name="topMargin">
-           <number>4</number>
-          </property>
-          <property name="rightMargin">
-           <number>4</number>
-          </property>
-          <property name="bottomMargin">
-           <number>4</number>
-          </property>
-          <item>
-           <layout class="QGridLayout" name="gridLayoutMessage">
-            <item row="0" column="1">
-             <widget class="ClickableLabel" name="label_title">
-              <property name="toolTip">
-               <string>Title font</string>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">ClickableLabel {border: 1px solid red;}</string>
-              </property>
-              <property name="text">
-               <string>Title</string>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_8">
+          <item row="0" column="0">
+           <layout class="QGridLayout" name="gridLayout_5">
+            <item row="0" column="2" rowspan="3">
+             <widget class="Line" name="line">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
               </property>
              </widget>
             </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_icon">
+            <item row="0" column="8">
+             <widget class="QLabel" name="label_11">
               <property name="maximumSize">
                <size>
-                <width>33</width>
-                <height>33</height>
+                <width>20</width>
+                <height>20</height>
                </size>
               </property>
               <property name="text">
                <string/>
               </property>
               <property name="pixmap">
-               <pixmap resource="../resources.qrc">:/res/icons/gotify-tray++.ico</pixmap>
+               <pixmap resource="../resources.qrc">:/res/themes/light/trashcan.svg</pixmap>
               </property>
               <property name="scaledContents">
                <bool>true</bool>
               </property>
              </widget>
             </item>
-            <item row="0" column="4">
-             <widget class="QLabel" name="label_delete">
-              <property name="text">
-               <string/>
-              </property>
-              <property name="pixmap">
-               <pixmap resource="../resources.qrc">:/res/themes/light/trashcan.svg</pixmap>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="2">
-             <spacer name="horizontalSpacer_7">
+            <item row="0" column="6">
+             <spacer name="horizontalSpacer_9">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -326,34 +298,258 @@
               </property>
              </spacer>
             </item>
-            <item row="0" column="3">
-             <widget class="ClickableLabel" name="label_date">
-              <property name="toolTip">
-               <string>Date font</string>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">ClickableLabel {border: 1px solid red;}</string>
-              </property>
-              <property name="text">
-               <string>31/01/2021 11:11</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1" colspan="4">
-             <widget class="ClickableLabel" name="label_message">
-              <property name="toolTip">
-               <string>Message font</string>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">ClickableLabel {border: 1px solid red;}</string>
+            <item row="0" column="7">
+             <widget class="QLabel" name="label_10">
+              <property name="maximumSize">
+               <size>
+                <width>18</width>
+                <height>18</height>
+               </size>
               </property>
               <property name="text">
-               <string>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus.</string>
+               <string/>
               </property>
-              <property name="wordWrap">
+              <property name="pixmap">
+               <pixmap resource="../resources.qrc">:/res/themes/light/refresh.svg</pixmap>
+              </property>
+              <property name="scaledContents">
                <bool>true</bool>
               </property>
              </widget>
+            </item>
+            <item row="1" column="3" colspan="6">
+             <widget class="Line" name="line_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="4">
+             <spacer name="horizontalSpacer_8">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="0" column="5">
+             <widget class="ClickableLabel" name="label_selected_application">
+              <property name="font">
+               <font>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="toolTip">
+               <string>Selected application font</string>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">ClickableLabel {border: 1px solid red;}</string>
+              </property>
+              <property name="text">
+               <string>ALL MESSAGES</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="3">
+             <widget class="QLabel" name="label_9">
+              <property name="maximumSize">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="pixmap">
+               <pixmap resource="../resources.qrc">:/res/themes/light/status_active.svg</pixmap>
+              </property>
+              <property name="scaledContents">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="3" colspan="6">
+             <layout class="QGridLayout" name="gridLayoutMessage">
+              <item row="0" column="5">
+               <widget class="ClickableLabel" name="label_delete">
+                <property name="text">
+                 <string/>
+                </property>
+                <property name="pixmap">
+                 <pixmap resource="../resources.qrc">:/res/themes/light/trashcan.svg</pixmap>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="2" colspan="4">
+               <widget class="ClickableLabel" name="label_message">
+                <property name="toolTip">
+                 <string>Message font</string>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true">ClickableLabel {border: 1px solid red;}</string>
+                </property>
+                <property name="text">
+                 <string>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus.</string>
+                </property>
+                <property name="wordWrap">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="2">
+               <widget class="ClickableLabel" name="label_title">
+                <property name="toolTip">
+                 <string>Title font</string>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true">ClickableLabel {border: 1px solid red;}</string>
+                </property>
+                <property name="text">
+                 <string>Title</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="3">
+               <spacer name="horizontalSpacer_7">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="0" column="4">
+               <widget class="ClickableLabel" name="label_date">
+                <property name="toolTip">
+                 <string>Date font</string>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true">ClickableLabel {border: 1px solid red;}</string>
+                </property>
+                <property name="text">
+                 <string>31/01/2021 11:11</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="ClickableLabel" name="label_icon">
+                <property name="maximumSize">
+                 <size>
+                  <width>33</width>
+                  <height>33</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string/>
+                </property>
+                <property name="pixmap">
+                 <pixmap resource="../resources.qrc">:/res/icons/gotify-tray++.ico</pixmap>
+                </property>
+                <property name="scaledContents">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item row="0" column="1" rowspan="3">
+             <layout class="QGridLayout" name="gridLayout_7">
+              <item row="2" column="0">
+               <spacer name="verticalSpacer_4">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>40</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="1" column="0">
+               <layout class="QHBoxLayout" name="horizontalLayout_2">
+                <item>
+                 <widget class="QLabel" name="label_6">
+                  <property name="maximumSize">
+                   <size>
+                    <width>33</width>
+                    <height>33</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="pixmap">
+                   <pixmap resource="../resources.qrc">:/res/icons/gotify-tray++.ico</pixmap>
+                  </property>
+                  <property name="scaledContents">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="ClickableLabel" name="label_application2">
+                  <property name="toolTip">
+                   <string>Application font</string>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">ClickableLabel {border: 1px solid red;}</string>
+                  </property>
+                  <property name="text">
+                   <string>App 2</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item row="0" column="0">
+               <layout class="QHBoxLayout" name="horizontalLayout">
+                <item>
+                 <widget class="QLabel" name="label_5">
+                  <property name="maximumSize">
+                   <size>
+                    <width>33</width>
+                    <height>33</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="pixmap">
+                   <pixmap resource="../resources.qrc">:/res/icons/gotify-tray++.ico</pixmap>
+                  </property>
+                  <property name="scaledContents">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="ClickableLabel" name="label_application1">
+                  <property name="toolTip">
+                   <string>Application font</string>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">ClickableLabel {border: 1px solid red;}</string>
+                  </property>
+                  <property name="text">
+                   <string>App 1</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+             </layout>
             </item>
            </layout>
           </item>
@@ -716,8 +912,8 @@
    <slot>clearCache()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>97</x>
-     <y>290</y>
+     <x>104</x>
+     <y>224</y>
     </hint>
     <hint type="destinationlabel">
      <x>534</x>
@@ -733,7 +929,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>185</x>
-     <y>290</y>
+     <y>224</y>
     </hint>
     <hint type="destinationlabel">
      <x>470</x>
@@ -892,8 +1088,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>57</x>
-     <y>109</y>
+     <x>68</x>
+     <y>102</y>
     </hint>
     <hint type="destinationlabel">
      <x>486</x>
@@ -909,7 +1105,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>119</x>
-     <y>157</y>
+     <y>91</y>
     </hint>
     <hint type="destinationlabel">
      <x>474</x>
@@ -925,7 +1121,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>218</x>
-     <y>157</y>
+     <y>91</y>
     </hint>
     <hint type="destinationlabel">
      <x>467</x>
@@ -940,8 +1136,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>57</x>
-     <y>175</y>
+     <x>68</x>
+     <y>168</y>
     </hint>
     <hint type="destinationlabel">
      <x>577</x>
@@ -957,7 +1153,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>135</x>
-     <y>223</y>
+     <y>157</y>
     </hint>
     <hint type="destinationlabel">
      <x>594</x>
@@ -1004,8 +1200,8 @@
    <slot>titleFont()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>69</x>
-     <y>136</y>
+     <x>181</x>
+     <y>176</y>
     </hint>
     <hint type="destinationlabel">
      <x>488</x>
@@ -1020,8 +1216,8 @@
    <slot>dateFont()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>311</x>
-     <y>119</y>
+     <x>350</x>
+     <y>176</y>
     </hint>
     <hint type="destinationlabel">
      <x>596</x>
@@ -1036,8 +1232,8 @@
    <slot>messageFont()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>185</x>
-     <y>170</y>
+     <x>380</x>
+     <y>230</y>
     </hint>
     <hint type="destinationlabel">
      <x>600</x>
@@ -1052,12 +1248,60 @@
    <slot>resetSettings()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>68</x>
-     <y>83</y>
+     <x>79</x>
+     <y>330</y>
     </hint>
     <hint type="destinationlabel">
      <x>529</x>
      <y>179</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>label_application2</sender>
+   <signal>clicked()</signal>
+   <receiver>SettingsDialog</receiver>
+   <slot>applicationFont()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>102</x>
+     <y>183</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>591</x>
+     <y>346</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>label_application1</sender>
+   <signal>clicked()</signal>
+   <receiver>SettingsDialog</receiver>
+   <slot>applicationFont()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>86</x>
+     <y>140</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>524</x>
+     <y>380</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>label_selected_application</sender>
+   <signal>clicked()</signal>
+   <receiver>SettingsDialog</receiver>
+   <slot>selectedApplicationFont()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>280</x>
+     <y>127</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>646</x>
+     <y>146</y>
     </hint>
    </hints>
   </connection>
@@ -1073,5 +1317,7 @@
   <slot>messageFont()</slot>
   <slot>resetFonts()</slot>
   <slot>resetSettings()</slot>
+  <slot>applicationFont()</slot>
+  <slot>selectedApplicationFont()</slot>
  </slots>
 </ui>
