--- a/src/messagewidget.ui
+++ b/src/messagewidget.ui
@@ -182,6 +182,9 @@
         <property name="text">
          <string/>
         </property>
+        <property name="scaledContents">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="0" column="1" rowspan="5">
