--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -7,38 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>440</width>
-    <height>328</height>
+    <height>356</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="1">
-    <widget class="QLabel" name="label_app_version">
-     <property name="text">
-      <string/>
+   <item row="1" column="4">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
-    </widget>
-   </item>
-   <item row="1" column="2">
-    <widget class="QLabel" name="label_qt_icon">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="3">
-    <widget class="QLabel" name="label_qt_version">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_app_icon">
-     <property name="text">
-      <string/>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::StandardButton::Apply|QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
     </widget>
    </item>
@@ -58,19 +40,6 @@
           <string>Notifications</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
-          <item row="0" column="2">
-           <spacer name="horizontalSpacer_3">
-            <property name="orientation">
-             <enum>Qt::Orientation::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
           <item row="0" column="1">
            <widget class="QSpinBox" name="spin_priority">
             <property name="minimum">
@@ -84,17 +53,17 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="2">
-           <widget class="QLabel" name="label_notification_duration_ms">
-            <property name="text">
-             <string>ms</string>
-            </property>
-           </widget>
-          </item>
           <item row="1" column="0">
            <widget class="QLabel" name="label_notification_duration">
             <property name="text">
              <string>Notification duration:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" colspan="3">
+           <widget class="QCheckBox" name="cb_notify_start">
+            <property name="text">
+             <string>Show a notification for missed messages at application start</string>
             </property>
            </widget>
           </item>
@@ -104,6 +73,19 @@
              <string>Minimum priority to show notifications:</string>
             </property>
            </widget>
+          </item>
+          <item row="0" column="2">
+           <spacer name="horizontalSpacer_3">
+            <property name="orientation">
+             <enum>Qt::Orientation::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
           </item>
           <item row="1" column="1">
            <widget class="QSpinBox" name="spin_duration">
@@ -118,10 +100,17 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="0" colspan="3">
-           <widget class="QCheckBox" name="cb_notify_start">
+          <item row="1" column="2">
+           <widget class="QLabel" name="label_notification_duration_ms">
             <property name="text">
-             <string>Show a notification for missed messages at application start</string>
+             <string>ms</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0" colspan="3">
+           <widget class="QCheckBox" name="cb_delete">
+            <property name="text">
+             <string>Delete messages after they have been displayed</string>
             </property>
            </widget>
           </item>
@@ -244,13 +233,31 @@
      </widget>
     </widget>
    </item>
-   <item row="1" column="4">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Orientation::Horizontal</enum>
+   <item row="1" column="2">
+    <widget class="QLabel" name="label_qt_icon">
+     <property name="text">
+      <string/>
      </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::StandardButton::Apply|QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QLabel" name="label_qt_version">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_app_icon">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLabel" name="label_app_version">
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
@@ -261,6 +268,7 @@
   <tabstop>spin_priority</tabstop>
   <tabstop>spin_duration</tabstop>
   <tabstop>cb_notify_start</tabstop>
+  <tabstop>cb_delete</tabstop>
   <tabstop>pb_change_server_info</tabstop>
   <tabstop>pb_clear_cache</tabstop>
   <tabstop>pb_open_cache_dir</tabstop>
@@ -275,8 +283,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>405</x>
-     <y>436</y>
+     <x>433</x>
+     <y>349</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -291,8 +299,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>405</x>
-     <y>436</y>
+     <x>433</x>
+     <y>349</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
@@ -307,8 +315,8 @@
    <slot>clearCache()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>104</x>
-     <y>224</y>
+     <x>113</x>
+     <y>73</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -323,8 +331,8 @@
    <slot>openCache()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>185</x>
-     <y>224</y>
+     <x>114</x>
+     <y>73</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -339,8 +347,8 @@
    <slot>saveSettings()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>405</x>
-     <y>436</y>
+     <x>433</x>
+     <y>349</y>
     </hint>
     <hint type="destinationlabel">
      <x>23</x>
@@ -355,8 +363,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>256</x>
-     <y>77</y>
+     <x>343</x>
+     <y>109</y>
     </hint>
     <hint type="destinationlabel">
      <x>412</x>
@@ -371,8 +379,8 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>297</x>
-     <y>106</y>
+     <x>343</x>
+     <y>147</y>
     </hint>
     <hint type="destinationlabel">
      <x>411</x>
@@ -387,8 +395,8 @@
    <slot>serverInfo()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>136</x>
-     <y>376</y>
+     <x>153</x>
+     <y>285</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -403,8 +411,8 @@
    <slot>resetSettings()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>101</x>
-     <y>330</y>
+     <x>102</x>
+     <y>55</y>
     </hint>
     <hint type="destinationlabel">
      <x>414</x>
@@ -419,12 +427,28 @@
    <slot>changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>103</x>
-     <y>128</y>
+     <x>120</x>
+     <y>175</y>
     </hint>
     <hint type="destinationlabel">
      <x>408</x>
      <y>143</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cb_delete</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>SettingsDialog</receiver>
+   <slot>changed()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>275</x>
+     <y>190</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>440</x>
+     <y>192</y>
     </hint>
    </hints>
   </connection>
